# poocs

point/: main.cpp  point.cpp  point2D.cpp  point2D.h
td/5_method/: app  test.cpp
td/algo/: app  main.cc
td/const/: app  test.cpp
td/copy_lambda/: app  main.cc  makefile
td/exception/: app  main.cc
td/iterator/: app  main.cc
td/maille/: app  main.cc
td/mem/: app  test.cpp
td/point/: app  makefile  point.h  point3D.cpp  point3D.h
td/rvalue/: app  main.cc
td/rvalue_ref/: app  main.cc
td/smart_ptr/: app  main.cc  main.cc~  main.c~
td/solver/: Makefile  app  main.cc
td/template/: app  test.cpp
td/tuple/: app  main.cpp  main.cpp~  tuple.cpp  tuple.cpp~  tuple.hh
td/var/: a.out  main  main.cpp  overloading.cpp
test/: main.c  makefile  test.h
tp/: script.sh
tp/td1/: CMakeLists.txt  Makefile  main.cpp  test.cpp
tp/td1/mylib/: Makefile  cmake_install.cmake  mylib.cpp  mylib.h
tp/td2/: CMakeLists.txt
tp/td2/src/: class.h  main.cpp  particles.cpp  particles.h  simulator.cpp  simulator.h  steady_simulator.cpp  steady_simulator.h  unsteady_simulator.cpp  unsteady_simulator.h
tp/td2/tests/: tests.cpp
tp/td3/: CMakeLists.txt
tp/td3/ressources/: pos.p  vel.p
tp/td3/src/: CMakeLists.txt  gas_field.h  main.cpp  particles.cpp  particles.h  simulator.cpp  simulator.h  steady_simulator.cpp  steady_simulator.h  unsteady_simulator.cpp  unsteady_simulator.h
tp/td3/tests/: tests.cpp
tp/td4/: README.org
tp/td4/ressources/: exec.sh  particle_positions_0.000000  particle_positions_0.200000  pos.p  vel.p  (+7 more)
tp/td4/tests/: CMakeLists.txt  tests.cpp
(+10 files in other folders)
